--- a/style/style.scss
+++ b/style/style.scss
@@ -16,18 +16,16 @@ $fonts: (
     "second-font": Pacifico
 );
 
-$form-smobile-width: 200px;
+$form-mobile-width: 200px;
+$form-tablet-width: 300px;
+$form-desktop-width: 400px;
 
-$mobile-small: 'only screen and (min-device-width: 320px) and (max-device-width: 568px)';
+$mobile: 'only screen and (min-device-width: 350px) and (max-device-width: 568px)';
 
-$mobile-ip6: 'screen and (min-device-width: 375px) and (max-device-width: 667px)';
+$long-mobile: 'only screen and (min-device-height: 750px)';
 
-$long-mobile: 'only screen and (min-device-height: 700px) and (max-device-width: 430px)';
-
-$mobile-large: 'only screen and (min-device-width: 375px) and (max-device-width: 830px) and (-webkit-min-device-pixel-ratio: 3)';
-
-$tablet: 'only screen and (min-width: 480px) and (max-width: 1200px)';
-$desktop: 'only screen and (min-width: 1200px)';
+$tablet: 'only screen and (min-width: 480px) and (max-width: 1024px)';
+$desktop: 'only screen and (min-width: 1024px)';
 
 @mixin flex ($-jcont, $-aitem, $-fdir){
     display: flex;
@@ -45,6 +43,7 @@ $desktop: 'only screen and (min-width: 1200px)';
 body{
     @include flex(space-between, normal, column);
     position: relative;
+    overflow-x: hidden;
     // align-content: space-between;
     width: 100vw;
     height: 100vh;
@@ -55,7 +54,6 @@ body{
     font-family: map-get($map: $fonts, $key: main-font);
     
 
-    //fixed long mobile main container display
     @media #{$long-mobile}{
         justify-content: normal;
     }
@@ -65,29 +63,44 @@ body{
 header{
     @include flex(space-between, center, row);
     position: relative;
-    padding: .7rem 1rem .7rem 1.3rem;
+    padding: .7rem  1.5rem .7rem 1.3rem;
+    
     width: 100%;
-    // height: 50px;
-    min-height: 10%;
+    height: auto;
+    z-index: 2;
     background-color: white;
-
+    
     .logo{
         position: relative;
         width: 90px;
         height: 40px;
     }
+    
+    @media #{$tablet}{
+        // padding: 0rem 2rem;
+        padding: 1.5% 8% 1.5% 5%;
+        
+        .logo{
+            width: 140px;
+            height: 60px;
+        }
+    }
+
+    @media #{$desktop}{
+        padding: 1.5% 15% 1.5% 10%;
+        .logo{
+            width: 140px;
+            height: 60px;
+        }
+    }
 }
 
 main{
-
     position: relative;
     width: 100%;
     height: auto;
-    // display: ;
-    // top: 0;
-    // left: 0;
 
-    //container with "Tak jak ty..." text and two meal pictures 
+    //container with "Tak jak ty..." text and two meal images
     .first-container{
         @include flex(space-between, center, row);
         height: 13rem;
@@ -96,23 +109,39 @@ main{
         position: relative;
         top: 0;
         left: 0;
+        z-index: -1;
 
-
-        @media #{$mobile-large}{
+        @media #{$mobile}{
             height: 17rem;
+        }
+
+        @media #{$tablet}, #{$desktop}{
+            height: 22rem;
         }
 
         //left meal picture
         &::before{
             content: '';
             position: relative;
-            top: 1.2rem;
+            top: 2rem;
             left: -2rem;
             width: 45%;
             height: 100%;
         
-            @media #{$mobile-large}{
-                top: 1.5rem;
+            @media #{$mobile}{
+                top: 2rem;
+            }
+
+            @media #{$tablet}{
+                top: 0;
+                width: 40%;
+            }
+
+            @media #{$desktop} {
+                height: 100%;
+                width: 30%;
+                top:0;
+                left:0;
             }
         }
 
@@ -120,13 +149,25 @@ main{
         &::after{
             content: '';
             position: relative;
-            top: -2rem;
+            top: -1.85rem;
             right: -2rem;
             width: 45%;
             height: 100%;
 
-            @media #{$mobile-large}{
-                top: -2.55rem;
+            @media #{$mobile}{
+                top: -2.4rem;
+            }
+
+            @media #{$tablet}{
+                top: -2rem;
+                width: 42%;
+            }
+
+            @media #{$desktop} {
+                height: 100%;
+                width: 34%;
+                top:0;
+                left:0;
             }
         }
 
@@ -141,9 +182,19 @@ main{
             // margin: 0 0 4rem 0;
             width: 100%;
 
-            @media #{$mobile-large}{
+            @media #{$mobile}{
                 font-size: 1.4rem;
                 top: 5.5rem
+            }
+
+            @media #{$tablet}{
+                top: 4.5rem;
+                font-size: 2.3rem;
+            }
+
+            @media #{$desktop}{
+                top: 4rem;
+                font-size: 3rem;
             }
         }
 
@@ -163,13 +214,28 @@ main{
             border-radius: 10px;
             box-shadow: 2px 4px 7px 0px rgba(131, 131, 131, 0.3);
 
+            @media #{$tablet}{
+                width: 80%;
+            }
+
+            @media #{$desktop}{
+                width: 65%;
+            }
             //"Specjalne okazje!" text
             .form-head-text{
                 @include font(1.3rem, 700);
                 margin: 0 0 .5rem 0;
 
-                @media #{$mobile-large}{
+                @media #{$mobile}{
                     font-size: 1.5rem;
+                }
+
+                @media #{$tablet}{
+                    font-size: 2.2rem;
+                }
+
+                @media #{$desktop}{
+                    font-size: 2.5rem;
                 }
             }
 
@@ -178,25 +244,51 @@ main{
                 @include font(.5rem, 400);
                 letter-spacing: .2px;
                 line-height: .9rem;
-                width: $form-smobile-width;
+                width: $form-mobile-width;
                 border-left: 4px solid map-get($map: $colors, $key: second-color);
                 padding-left: .3rem;
-                margin: 0 0 0.5rem 0;
+                margin: 0.2rem 0 .5rem 0;
                 border-radius: 3px;
+
+                @media #{$tablet}{
+                    font-size: .8rem;
+                    width: $form-tablet-width;
+                }
+
+                @media #{$desktop}{
+                    line-height: 1.2rem;
+                    font-size: 1rem;
+                    width: $form-desktop-width;
+                }
             }
 
             //whole form styling 
             .form{
                 @include flex(normal, center, column);
-                width: $form-smobile-width;
+                width: $form-mobile-width;
 
+                @media #{$tablet}{
+                    width: $form-tablet-width;
+                }
+
+                @media #{$desktop} {
+                    width: $form-desktop-width;   
+                }
                 .form-labels{
                     @include font(.5rem, 500);
                     margin: .5rem 0 .3rem 0;
-                    width: $form-smobile-width;
+                    width: inherit;
 
-                    @media #{$mobile-large}{
+                    @media #{$mobile}{
                         font-size: .55rem;
+                    }
+
+                    @media #{$tablet}{
+                        font-size: .8rem;
+                    }
+
+                    @media #{$desktop}{
+                        font-size: 1rem;
                     }
                 }
 
@@ -204,14 +296,19 @@ main{
                     @include font(.6rem, 500);
                     font-family: map-get($map: $fonts, $key: main-font);
                     padding: .3rem .3rem;
-                    border: none;
                     background-color: rgb(226, 226, 226);
                     border-radius: 3px;
-                    width: $form-smobile-width;
+                    width: inherit;
 
-                    &:focus{
-                        border: .5px solid grey;
-                        outline: none;
+                    // &.error{
+                    //     border: 4px solid red;
+                    // }
+                    @media #{$tablet}{
+                        font-size: .8rem;
+                    }
+
+                    @media #{$desktop}{
+                        font-size: 1rem;
                     }
                 }
 
@@ -220,6 +317,15 @@ main{
                     text-align: center;
                     padding: .5rem 0;
                     border-bottom: .5px solid rgb(226, 226, 226);
+                    letter-spacing: .5px;
+
+                    @media #{$tablet}{
+                        font-size: .4rem;
+                    }
+
+                    @media #{$desktop}{
+                        font-size: .6rem;
+                    }
                 }
 
                 #send-button{
@@ -227,17 +333,32 @@ main{
                     font-family: map-get($map: $fonts, $key: main-font);
                     width: 5rem;
                     height: 1.8rem;
-                    background-color: #ffd200;
+                    background-color: map-get($map: $colors, $key: second-color);
                     border: none;
                     box-shadow: 2px 2px 7px 0px rgba(131, 131, 131, 0.432);
                     margin: 1rem 0 0 0;
                     border-radius: 5px;
+                    outline: none;
                     appearance: none;
 
-                    // @media #{$mobile-huge}{
-                    //     width: 5rem;
-                    //     height: 1.8rem;
-                    // }
+                    @media #{$tablet}{
+                        width: 7rem;
+                        height: 2.5rem;
+                        font-size: .8rem;
+                    }
+
+                    @media #{$desktop}{
+                        width: 9rem;
+                        height: 3.3rem;
+                        font-size: 1rem
+
+                    }
+
+                    &:hover{
+                        background-color: #838175;
+                        transition: all .5s ease;
+                        transform: translateY(-15%);
+                    }
                 }
             }
 
@@ -250,37 +371,53 @@ main{
 footer{
     position: relative;
     width: 100vw;
-    @include flex(space-between, normal, row);
-    padding: 1.5rem 1.5rem;
-
-    //this fixed main and footer container position   
-    @media #{$long-mobile}{
-        position: absolute;
-        bottom: 0;
+    @include flex(center, center, column);
+    padding: 3% 0;
+    // margin: 0% 5%;
+    
+    @media #{$tablet}{
+        // padding: 1.5rem 2rem;
     }
     
+    @media #{$desktop}{
+        padding: 5% 0 3% 0;
+    }
+
     //yellow rectangle
     &::before{
         content: "";
-        position: absolute;
+        position: relative;
         width: 2rem;
         height: .3rem;
-        left: 1.5rem;
-        top: -.5rem;
+        left: -33vw;
+        top: -18%;
         background-color: map-get($map: $colors, $key: second-color);
         border-radius: 4px;
     }
 
-    //nav for lazy people 
+    .footer-nav-container{
+        @include flex(space-around, normal, row);
+        position: relative;
+        width: 75%;
+        padding-bottom: 2%;
+        border-bottom: .1px solid rgb(168, 168, 168);
+
+    }
+    
+    //second nav block
     .footer-nav{
         @include font(.55rem, 500);
+        
+        &:last-child{
+            margin-right: 0;
+        }
         
         h4{
             margin: 0 0 .4rem 0;
         }
 
         ul{
-            @include flex(flex-start, normal, column);
+            @include flex(normal, normal, column);
             @include font(.4rem, 400);
             list-style-type: none;
             padding: 0;
@@ -296,12 +433,32 @@ footer{
                         color: black;
                         text-decoration: none;
                     }
+
+                    &:hover{
+                        color: gray;
+                    }
                 }
             }
         }
 
+        @media #{$tablet}{
+            font-size: .9rem;
+
+            ul{
+                font-size: .7rem;
+            }
+        }
+
+        @media #{$desktop}{
+            font-size: .9rem;
+
+            ul{
+                font-size: .8rem;
+            }
+        }
+
         .social-media-container{
-            @include flex (space-between, center, row);
+            @include flex (space-around, center, row);
             margin-top: .5rem;
 
             a{
@@ -317,7 +474,64 @@ footer{
                     height: 1.3rem;
                 }
             }
+
+            @media #{$tablet}{
+                a{
+                    div.instagram-icon{
+                        width: 2.1rem;
+                        height: 2rem;
+                    }
+
+                    div.facebook-icon{
+                        width: 2rem;
+                        height: 2rem;
+                    }
+                }
+            }
+
+            @media #{$desktop}{
+                a{
+                    div.instagram-icon{
+                        width: 2.34rem;
+                        height: 2.3rem;
+                    }
+
+                    div.facebook-icon{
+                        width: 2.2rem;
+                        height: 2.2rem;
+                    }
+                }
+            }
         }
+        
+        .login{
+            position: relative;
+            display: block;
+            margin-top: .5rem;
+            a{
+                color: black;
+                text-decoration: none;
+
+                &:hover{
+                    color: gray;
+                }
+            }
+        }
+    }
+
+}
+.copyright{
+    margin-top: 2%;
+    @include font(.3rem, 500);
+    position: relative;
+    color: black;
+    
+    @media #{$tablet}{
+        font-size: .6rem
+    }
+
+    @media #{$desktop}{
+        font-size: .9rem;
     }
 }
 
