--- a/style/style.scss
+++ b/style/style.scss
@@ -44,7 +44,6 @@ body{
     @include flex(space-between, normal, column);
     position: relative;
     overflow-x: hidden;
-    // align-content: space-between;
     width: 100vw;
     height: 100vh;
     max-height: 110vh;
@@ -77,7 +76,6 @@ header{
     }
     
     @media #{$tablet}{
-        // padding: 0rem 2rem;
         padding: 1.5% 8% 1.5% 5%;
         
         .logo{
@@ -179,7 +177,6 @@ main{
             color: map-get($map: $colors, $key: "second-color");
             position: absolute;
             top: 3rem;
-            // margin: 0 0 4rem 0;
             width: 100%;
 
             @media #{$mobile}{
@@ -224,7 +221,7 @@ main{
             //"Specjalne okazje!" text
             .form-head-text{
                 @include font(1.3rem, 700);
-                margin: 0 0 .5rem 0;
+                margin: 3% 0 .5rem 0;
 
                 @media #{$mobile}{
                     font-size: 1.5rem;
@@ -272,7 +269,8 @@ main{
                 }
 
                 @media #{$desktop} {
-                    width: $form-desktop-width;   
+                    width: $form-desktop-width;  
+                    margin-bottom: 3%; 
                 }
                 .form-labels{
                     @include font(.5rem, 500);
@@ -300,9 +298,6 @@ main{
                     border-radius: 3px;
                     width: inherit;
 
-                    // &.error{
-                    //     border: 4px solid red;
-                    // }
                     @media #{$tablet}{
                         font-size: .8rem;
                     }
@@ -351,7 +346,6 @@ main{
                         width: 9rem;
                         height: 3.3rem;
                         font-size: 1rem
-
                     }
 
                     &:hover{
@@ -373,11 +367,6 @@ footer{
     width: 100vw;
     @include flex(center, center, column);
     padding: 3% 0;
-    // margin: 0% 5%;
-    
-    @media #{$tablet}{
-        // padding: 1.5rem 2rem;
-    }
     
     @media #{$desktop}{
         padding: 5% 0 3% 0;
