--- a/style/style.css
+++ b/style/style.css
@@ -56,6 +56,7 @@ header {
           flex-direction: row;
   position: relative;
   padding: .7rem  1.5rem .7rem 1.3rem;
+  min-height: 12%;
   width: 100%;
   height: auto;
   z-index: 2;
@@ -661,6 +662,7 @@ footer .footer-nav .login a:hover {
   font-weight: 500;
   position: relative;
   color: black;
+  display: block;
 }
 
 @media only screen and (min-width: 480px) and (max-width: 1024px) {
