--- a/style/style.scss
+++ b/style/style.scss
@@ -45,8 +45,8 @@ body{
     position: relative;
     overflow-x: hidden;
     width: 100vw;
-    height: 100vh;
-    max-height: 110vh;
+    height: auto;
+    // max-height: 110vh;
     margin: 0;
     padding: 0;
     background-color: map-get($map: $colors, $key: first-color);
@@ -377,7 +377,7 @@ footer{
         width: 2rem;
         height: .3rem;
         left: -33vw;
-        top: -18%;
+        top: -1.5rem;
         background-color: map-get($map: $colors, $key: second-color);
         border-radius: 4px;
     }
